added virtual server information

--- a/templates/motd.erb
+++ b/templates/motd.erb
@@ -7,7 +7,7 @@ Processor: <%= processorcount %>x <%= processor0 %>
 <% end -%>
 Kernel   : <%= kernelrelease %>
 Memory   : <%= memorysize %>
-<% if is_virtual==true then -%>
+<% if is_virtual == 'true' then -%>
 ATTENTION: <%= virtual%> virtual server.
 <% end -%>
 
